[gd_scene load_steps=2 format=3 uid="uid://ddgct5bmcc2r1"]

[ext_resource type="Script" path="res://scenes/ui/asset_card.gd" id="1_jogtd"]

[node name="AssetCard" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jogtd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Character Name"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
